--- a/DRAFT/styles_global.css
+++ b/DRAFT/styles_global.css
@@ -24,6 +24,7 @@
     font-family: 'brother-1816', sans-serif;
     font-weight: 400;
     line-height: 1.5;
+    overflow-x: hidden;
   }
   
   
